# sage-training

./: .gitignore  README.md  pyproject.toml
src/data/: README.roboflow.txt
src/data/test/labels/: -_-35kV-2023-08-07_page_1_png.rf.0613dd3adf898d851a81064492ea8d1a.txt
src/data/train/labels/: -0719_page_1_png.rf.c85a830cfdc8fc7715e8b803dc187685.txt  -11-28_page_1_png.rf.06da4e5044d0f0ed76c68b5e6dc0b8ae.txt  -1117_page_2_png.rf.cd0c72319ddfe3633b49264ef0cfb851.txt  -3-35kV-_page_1_png.rf.faacaebc70952542b9d2ab7d7d04d5b4.txt  -50MW-D01-1-_page_1_png.rf.06c3027586db6a991b48af1e0aed6628.txt  -__-35kV-_page_1_png.rf.86686cf77b7c10db1a34a3813d467561.txt  -_page_1_png.rf.9cb0fad4c9c79e4cc977779c0496af2b.txt
src/data/valid/labels/: -11-28_page_2_png.rf.842eabffbd9603507b706329d571d1bf.txt
src/yolonas/: detect.py  result.json  test.ipynb  training.py
src/yolonas/data/: README.dataset.txt  data.yaml
src/yolonas/data/test/labels/: -_page_1_png.rf.22fb7bb84e7749ed3fb3a58b9d48bfee.txt
src/yolonas/data/train/labels/: -220kV-40-5kV-_page_1_png.rf.4b4ab5c4c053a6069501fe7e29fb89cc.txt  -_page_1_png.rf.2df5cc8f66da4f7213687c0f5b68cd39.txt  -_page_1_png.rf.798e78cb95cbf1f9672caf3d4238c61e.txt  -_page_2_png.rf.c6dcee487051ad1e357164c9714fc413.txt
src/yolonas/data/valid/labels/: -_page_1_png.rf.4efc53fcbe85c19da96e5c674c6f92f9.txt  -_page_1_png.rf.f4e86fd6f305b0dd937ee1c6568babc3.txt
